Try to fix overflow of Slider component

--- a/components/sliders/Slider.module.scss
+++ b/components/sliders/Slider.module.scss
@@ -7,10 +7,12 @@ $time: 0.4s;
   max-height: 85vh;
   display: flex;
   flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 .slides-wrapper {
-  height: 100%;
+  width: 100%;
   position: relative;
   flex-grow: 1;
   overflow: hidden;
